create controllers mvc tests for server